--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ footer {
   font-size: 50px;
   width: 50%;
   margin-left: 40px;
-  text-shadow: 10px 10px 10px linear-gradient(to bottom, #82ccd5, #ffffff);
+  text-shadow: 10px 10px 10px rgba(73, 112, 219, 0.5);
   color: #000000;
 }
 
