--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -64,7 +64,7 @@
   font-size: 50px;
   width: 50%;
   margin-left: 40px;
-  text-shadow: 10px 10px 10px $color-header;
+  text-shadow: 10px 10px 10px rgba(73, 112, 219, 0.5);
   color: $color-borde;
 }
 
