--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -3,130 +3,177 @@
 /*-------*/
 
 @media (max-width: 425px) {
+
+    body {
+        overflow-x: hidden;
+    }
+
+    .whatsapp-icon {
+        bottom: 10px;
+        right: 10px;
+    }
+
+    .whatsapp-icon img {
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+    }
+
+    .navbar {
+        position: relative;
+        z-index: 1000;
+    }
+
+    .navbar-toggler {
+        z-index: 1100;
+    }
+
+    .navbar-collapse {
+        z-index: 1050;
+    }
+
     .acordeon-main {
-      flex-direction: column;
-      align-items: center;
+        flex-direction: column;
+        align-items: center;
     }
-  
+
     .cuerpo-acordeon {
-      width: 100%;
+        width: 100%;
     }
-  
+
     .pie-pagina-T {
-      margin-right: 10px;
+        margin-right: 10px;
     }
-  
+
     .pie-pagina-1 h2 {
-      margin-left: 10px;
+        margin-left: 10px;
     }
-  
+
     .pie-pagina-nav {
-      margin-left: 0px;
+        margin-left: 0px;
     }
-  
+
     .encabezado {
-      margin-left: -35px;
+        margin-left: -35px;
     }
-  
+
     .encabezado img {
-      margin-left: 5px;
-      width: 115px;
-      height: 65px;
+        margin-left: 5px;
+        width: 115px;
+        height: 65px;
     }
-  
+
     .encabezado h1 {
-      margin-top: 7px;
-      font-size: 22px;
+        margin-top: 7px;
+        font-size: 22px;
     }
-  
+
     .menu {
-      flex-direction: column;
-      padding: 5px;
+        flex-direction: column;
+        padding: 5px;
     }
-  
+
     .menu a {
-      font-size: 18px;
+        font-size: 18px;
     }
-  
+
     .carrito img {
-      height: 56px;
-      width: 64px;
-      margin-right: -18px;
-      margin-top: 5px;
+        height: 56px;
+        width: 64px;
+        margin-right: -18px;
+        margin-top: 5px;
     }
-  
+
     .muestra-inicio h2 {
-      text-align: center;
-      font-size: 100px;
-      left: 0px;
+        text-align: center;
+        font-size: 100px;
+        left: 0px;
     }
-  
+
     .muestra-inicio p {
-      text-align: center;
-      font-size: 17px;
-      left: 0px;
-      top: 481px;
-      width: 100%;
+        text-align: center;
+        font-size: 17px;
+        left: 0px;
+        top: 481px;
+        width: 100%;
     }
-  
+
     .muestra-inicio img {
-      opacity: 0.65;
+        opacity: 0.65;
     }
-  
+
     .muestras {
-      flex-wrap: wrap;
-      justify-content: center;
-      width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
     }
-  
+
     .muestras h2 {
-      width: 100%;
-      margin-bottom: 50px;
+        width: 100%;
+        margin-bottom: 50px;
     }
-  
+
     .container {
-      justify-content: center;
-      flex-wrap: wrap;
+        justify-content: center;
+        flex-wrap: wrap;
+        overflow-x: hidden;
     }
-  
+
     .nuestros-prod h2 {
-      text-align: center;
-      padding: 16px;
-      width: 88%;
+        text-align: center;
+        padding: 16px;
+        width: 88%;
     }
-  
+
     .nosotros-index-main2 {
-      flex-direction: column;
-      align-items: center;
+        flex-direction: column;
+        align-items: center;
     }
-  
+
     .nosotros-index {
-      flex-wrap: wrap;
+        flex-wrap: wrap;
     }
-  
+
     .nosotros-index img {
-      height: 215px;
+        height: 215px;
     }
-  
+
     .nosotros-index p {
-      font-size: 16px;
-      text-align: left;
-      margin-left: 0px;
-      margin-top: 30px;
+        font-size: 16px;
+        text-align: left;
+        margin-left: 0px;
+        margin-top: 30px;
     }
-  
+
     .nosotros-index button {
-      right: 140px;
+        right: 62px;
     }
-  
+
     .pasion-nat h3 {
-      margin-top: 20px;
+        margin-top: 20px;
     }
-  
+
     .seccion-beneficios {
-      margin-top: 0px;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
+        margin-top: 0px;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
     }
-  }
+
+    .main-container h2 {
+        text-align: center;
+        font-size: 32px;
+        border: none;
+        text-shadow: 10px 10px 10px rgba(73, 112, 219, 0.5);
+    }
+
+    .boton-ver-mas {
+        height: 75px;
+        padding: 0px;
+    }
+
+    .acordeon-main img {
+      margin-bottom: 100px;
+    }
+}
