--- a/css/style.css
+++ b/css/style.css
@@ -897,27 +897,22 @@ footer {
   background-color: #218838;
 }
 
-/* SECCION CARRITO DE COMPRAS */
-.cart {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 16px;
-  width: 300px;
-  text-align: center;
+.banner-terrarios img {
+  width: 100%;
+  height: 430px;
+  border: solid black 2px;
 }
 
-.cart h2 {
-  margin-top: 0;
+.banner-kokedamas img {
+  width: 100%;
+  height: 430px;
+  border: solid black 2px;
 }
 
-#cartItems {
-  list-style-type: none;
-  padding: 0;
-}
-
-#cartItems li {
-  margin: 5px 0;
+.banner-extras img {
+  width: 100%;
+  height: 430px;
+  border: solid black 2px;
 }
 
 /*-------*/
