Arreglo en los mediaqueries, final del proyecto

--- a/css/style.css
+++ b/css/style.css
@@ -1061,6 +1061,15 @@ footer {
   .acordeon-main img {
     margin-bottom: 100px;
   }
+  .banner-kokedamas img {
+    height: 200px;
+  }
+  .banner-terrarios img {
+    height: 200px;
+  }
+  .banner-extras img {
+    height: 200px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
