--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -180,4 +180,16 @@
     .acordeon-main img {
       margin-bottom: 100px;
     }
+
+    .banner-kokedamas img{
+        height: 200px;
+    }
+
+    .banner-terrarios img{
+        height: 200px;
+    }
+
+    .banner-extras img{
+        height: 200px;
+    }
 }
